--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,7 @@
 			<div class="date">
 				{{ post.published_date }}
 			</div>
+
 		{% endif %}
 		
 		{% if user.is_authenticated %}
@@ -14,5 +15,19 @@
 
 		<h2>{{ post.title }}</h2>
 		<p>{{ post.text|linebreaksbr }}</p>
+		<small>Criado por: {{ post.author }}</small>
+		<div>
+			{{ total_likes }} Curtidas! {{ total_likes|pluralize }}
+		</div>
 	</div>
+	{% if user.is_authenticated %}
+		<form action="{% url 'like_post' %}" method="post">
+			{% csrf_token %}
+			{% if is_liked %}
+				<button type="submit" name="post_id" value="{{ post_id }}" class="btn btn-danger">Dislike</button>
+			{% else %}
+				<button type="submit" name="post_id" value="{{ post_id }}" class="btn btn-primary">Like</button>
+			{% endif %}
+		</form>
+	{% endif %}
 {% endblock %}
